Fix quiz interface alignment

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ button {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    margin: 1rem;
 }
 
 .question-nav-btn,
@@ -70,7 +71,8 @@ button {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 3rem;
 }
 
 .sentence-eng {
